syntax = "proto3";
package tails.paws.v1;

service NamespaceAPI {
  rpc ListNamespace(ListNamespaceRequest) returns (ListNamespaceResponse);
  rpc ShowNamespace(ShowNamespaceRequest) returns (ShowNamespaceResponse);
  rpc CreateNamespace(CreateNamespaceRequest) returns (CreateNamespaceResponse);
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceResponse);
}

message Namespace {
  string name = 1;
  bool is_directory = 2;
  bool is_file = 3;
  bool is_symbolic_link = 4;
}

message ListNamespaceRequest {

}

message ListNamespaceResponse {
  repeated Namespace namespaces = 1;
}

message ShowNamespaceRequest {
  string name = 1;
}

message ShowNamespaceResponse {
string name = 1;
  bool is_directory = 2;
  bool is_file = 3;
  bool is_symbolic_link = 4;
}

message CreateNamespaceRequest {
  string name = 1;
}

message CreateNamespaceResponse {

}

message DeleteNamespaceRequest {
  string name = 1;
}

message DeleteNamespaceResponse {
}
